<resources>

    <!-- App -->
    <string name="app_name">Email Sample</string>

    <!-- Common -->
    <string name="email">Email</string>
    <string name="sudos">Sudos</string>
    <string name="learn_more">Learn More</string>
    <string name="success">Success</string>
    <string name="delete">Delete</string>

    <!-- RegisterFragment -->
    <string name="sample_app">Sample App</string>
    <string name="registration_method">Registration Method</string>
    <string name="register_login">Register / Login</string>
    <string name="register_failure">Failed to register: %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="signin_failure">Failed to Sign In: %1$s</string>
    <string name="registration_keys_failure">Failed to load TEST registration keys: %1$s</string>
    <string name="test_registration">TEST Registration</string>
    <string name="federated_signin">Federated SignIn</string>
    <string name="reset">Reset</string>

    <!-- MainMenuFragment -->
    <string name="deregister">Deregister</string>
    <string name="deregister_confirmation">Are you sure you want to deregister? All Sudos, email addresses and associated data will be deleted.</string>
    <string name="deregistering">Deregistering&#8230;</string>
    <string name="deregister_failure">Unable to deregister: %1$s</string>

    <!-- SudosFragment -->
    <string name="email_doc_url" translatable="false">https://docs.sudoplatform.com/guides/email</string>
    <string name="loading_sudos">Loading Sudos</string>
    <string name="deleting_sudos">Deleting Sudos&#8230;</string>
    <string name="list_sudos_failure">Failed to list Sudos</string>
    <string name="delete_sudo_failure">Failed to delete Sudo</string>
    <string name="try_again">Try Again</string>
    <string name="what_is_a_sudo">What is a Sudo?</string>
    <string name="sudo_explanation">Email addresses must belong to a Sudo. A Sudo is a digital identity created and owned by a real person</string>

    <!-- CreateSudoFragment -->
    <string name="create_sudo_button">+ Create Sudo</string>
    <string name="create_sudo">Create Sudo</string>
    <string name="enter_sudo_name">Enter a name for your Sudo</string>
    <string name="enter_sudo_label">Enter Sudo Label</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="choose_label_detail">Choose any label you would like for your Sudo: Shopping, Dating, etc.</string>
    <string name="creating_sudo">Creating Sudo&#8230;</string>
    <string name="create_sudo_learn_more">Email addresses must belong to a Sudo. A Sudo is a digital identity created and owned by a real person.</string>
    <string name="create_sudo_doc_url" translatable="false">https://docs.sudoplatform.com/guides/sudos</string>

    <!-- CreateCustomFolderFragment -->
    <string name="enter_custom_folder_name_label">Enter folder name</string>
    <string name="create_custom_folder">Create Custom Folder</string>
    <string name="enter_custom_folder_name">Enter a name for your folder</string>
    <string name="creating_custom_folder">Creating folder&#8230;</string>

    <!-- EditCustomFolderFragment -->
    <string name="edit_custom_folder">Edit Custom Folder</string>
    <string name="saving_custom_folder">Saving folder&#8230;</string>

    <!-- EmailAddressesFragment.kt -->
    <string name="email_addresses">Email Addresses</string>
    <string name="create_email_address_button">+ Create Email Address</string>
    <string name="loading_email_addresses">Loading Email Addresses</string>
    <string name="list_email_addresses_failure">Failed to list email addresses</string>
    <string name="deleting_email_address">Deleting email address&#8230;</string>
    <string name="deleting_email_address_failure">Failed to delete email address</string>
    <string name="email_address_with_display_name">%1$s &#60;%2$s&#62;</string>

    <!-- ProvisionEmailAddressFragment -->
    <string name="provision_email_address">Create Email Address</string>
    <string name="enter_address_label">Enter local part of the email address</string>
    <string name="optional_enter_display_name_label">Enter display name (Optional)</string>
    <string name="email_address_unavailable">This email address is not available</string>
    <string name="email_address_available">This email address is available</string>
    <string name="enter_local_part">Enter the local part for your email address</string>
    <string name="provisioning_email_address">Provisioning email address&#8230;</string>
    <string name="provision_email_address_failure">Failed to provision an email address</string>
    <string name="check_address_availability_failure">Failed to retrieve available addresses</string>
    <string name="ownership_proof_error">Ownership proof cannot be found</string>
    <string name="sudo">Sudo</string>
    <string name="provision_email_address_learn_more">Addresses from different configured domains can be provisioned and used to communicate with other recipients. Entering the local part of the email address above will perform an address availability check based on the currently configured domains.</string>
    <string name="provision_email_address_doc_url" translatable="false">https://docs.sudoplatform.com/guides/email/manage-email-addresses</string>

    <!-- EmailMessagesFragment.kt -->
    <string name="email_messages">Email Messages</string>
    <string name="loading_email_messages">Loading Email Messages</string>
    <string name="list_email_messages_failure">Failed to list email messages</string>
    <string name="list_email_folders_failure">Failed to list email folders</string>
    <string name="from_recipient">%2$sFrom: %1$s</string>
    <string name="to_recipient">%2$sTo: %1$s</string>
    <string name="no_subject">No Subject</string>
    <string name="deleting_email_message">Deleting email message&#8230;</string>
    <string name="deleting_email_message_failure">Failed to delete email message</string>
    <string name="deleting_all_email_messages">Deleting all email messages&#8230;</string>
    <string name="deleting_all_email_messages_failure">Failed to delete all email messages</string>
    <string name="deleting_draft_email_message">Deleting draft email message&#8230;</string>
    <string name="deleting_draft_email_message_failure">Failed to delete draft email message</string>
    <string name="deleted">Deleted!</string>
    <string name="moving_email_message_to_trash">Moving to trash&#8230;</string>
    <string name="moving_email_message_failure">Failed to move email message</string>
    <string name="subscribe_email_messages_failure">Failed to subscribe to email message updates</string>
    <string name="subscribe_lost_connection">The subscription for email message updates has disconnected</string>
    <string name="confirm_delete_custom_folder_title">Delete Custom Folder</string>
    <string name="confirm_delete_custom_folder">Delete this custom folder and all of it\'s messages?</string>
    <string name="scheduled_at">Sending at %1$s</string>

    <!-- EmailAddressSettingsFragment.kt -->
    <string name="loading_email_address_settings">Loading settings</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="email_address_settings">Email Address Settings</string>
    <string name="load_email_address_settings_failure">Failed to load email address settings</string>

    <!-- EmailAddressBlocklistFragment.kt -->
    <string name="blocked_addresses">Blocked Addresses</string>
    <string name="loading_address_blocklist">Loading Email Address Blocklist</string>
    <string name="list_blocked_addresses_failure">Failed to list blocked addresses</string>
    <string name="blocking_address">Blocking email address&#8230;</string>
    <string name="unblocking_addresses">Unblocking email address(es)</string>
    <string name="unblock_addresses_failure">Failed to unblock addresses</string>
    <string name="block_address_failure">Failed to block address</string>

    <!-- SendEmailMessageFragment.kt -->
    <string name="to">To:&#xA0;&#xA0;</string>
    <string name="cc">Cc:&#xA0;&#xA0;</string>
    <string name="bcc">Bcc:&#xA0;&#xA0;</string>
    <string name="subject">Subject:&#xA0;&#xA0;</string>
    <string name="email_footer">\n\nSent from Sudo Platform Email Sample App</string>
    <string name="compose_email_message">Compose Message</string>
    <string name="sending">Sending&#8230;</string>
    <string name="sent">Sent!</string>
    <string name="saving">Saving Draft&#8230;</string>
    <string name="saved">Saved!</string>
    <string name="scheduling">Scheduling...</string>
    <string name="scheduled">Scheduled!</string>
    <string name="cancel_scheduling">Canceling...</string>
    <string name="canceled">Canceled!</string>
    <string name="send_email_message_failure">Failed to send email message</string>
    <string name="save_email_message_failure">Failed to save draft</string>
    <string name="schedule_email_message_failure">Failed to schedule email message</string>
    <string name="cancel_scheduled_message_failure">Failed to cancel scheduled message</string>
    <string name="get_email_address_failure">Failed to retrieve email address</string>
    <string name="validate_to_address">Please ensure the to address field is filled out.</string>
    <string name="reply_message">Re: %1$s</string>
    <string name="reply_body">\n\n---------------\n\n%1$s</string>
    <string name="forward_message">Fwd: %1$s</string>
    <string name="forward_body">\n\n---------------\n\n%1$s</string>
    <string name="encrypted_indicator_label">🔒 End-to-end encrypted</string>
    <string name="encrypted_email_address_lookup_failure">Failed to lookup email address encryption status</string>
    <string name="file_size">%1$s KB</string>

    <!-- ReadEmailMessageFragment.kt -->
    <string name="read_email_message">Read Email Message</string>
    <string name="from">From:&#xA0;&#xA0;</string>
    <string name="email_placeholder">test@example.com</string>
    <string name="content_placeholder">Email text body goes here</string>
    <string name="reading">Reading&#8230;</string>
    <string name="read_email_message_failure">Failed to read email message</string>

    <!-- Layout -->
    <string name="item_name">Item Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="placeholder">-</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="recipient_placeholder">Recipient/s</string>
    <string name="subject_placeholder">Subject</string>
    <string name="date_placeholder">Date</string>
    <string name="scheduled_placeholder">Scheduled</string>

</resources>
