<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".emailaddresses.ProvisionEmailAddressFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <EditText
                android:id="@+id/addressField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@android:color/white"
                android:hint="@string/enter_address_label"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/addressHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/availabilityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="@string/email_address_available"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:id="@+id/sudoLabelText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="0dp"
                        android:text="@string/placeholder"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sudoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sudo"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/provision_email_address_learn_more"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/learnMoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="55dp"
                    android:background="@color/colorBackground"
                    android:gravity="center|start"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/learn_more"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>