<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".emailmessages.ReadEmailMessageFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fromLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="14sp"
                    android:text="@string/from" />

                <TextView
                    android:id="@+id/fromValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="95dp"
                    android:textSize="14sp"
                    android:text="@string/email_placeholder"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:layout_toEndOf="@+id/fromLabel" />

                <TextView
                    android:id="@+id/dateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/date_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="14sp"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/toValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:autoSizeTextType="uniform"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="95dp"
                    android:textSize="14sp"
                    android:text="@string/email_placeholder"
                    android:singleLine="false"
                    android:ellipsize="end"
                    android:textColor="@android:color/black"
                    android:layout_toEndOf="@+id/toLabel" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ccLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textSize="14sp"
                    android:text="@string/cc" />

                <TextView
                    android:id="@+id/ccValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:autoSizeTextType="uniform"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="95dp"
                    android:textSize="14sp"
                    android:text="@string/email_placeholder"
                    android:singleLine="false"
                    android:ellipsize="end"
                    android:textColor="@android:color/black"
                    android:layout_toEndOf="@+id/ccLabel" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorBackground"/>

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/subject"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/contentBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/content_placeholder"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
